# primeburner

./: CMakeLists.txt  LICENSE  README.md
include/: atkin_q3.h  bitset.h  common.h  erath.h  sieve_func.h  trydivide.h
include/atkin/: atkin.h  atkin_q1.h  atkin_q2.h  atkin_q3.h
include/common/: bitset.h  bucket_list.h  defs.h  enum.h  presieve.h
include/erath/: erath.h  erath1.h  erath2.h
include/trydivide/: trydivide.h
src/: atkin_q1.c  atkin_q2.c  erath.c  main.c  sieve_func.c
src/atkin/: atkin.c  atkin_q1.c  atkin_q2.c  atkin_q3.c
src/common/: bitset.c  bucket_list.c  enum.c  presieve.c
src/erath/: erath.c  erath1.c  erath2.c
src/trydivide/: trydivide.c
