CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(primeburner)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

file(GLOB_RECURSE SOURCE_FILES
     "src/*"
)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Release")
ENDIF(NOT CMAKE_BUILD_TYPE)

SET(CMAKE_C_FLAGS "-std=c99 -Wall -Wextra")

SET(CMAKE_C_FLAGS_DEBUG "-O -g")

SET(CMAKE_C_FLAGS_RELEASE "-march=native -mtune=native -O2 -flto")
SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "${CMAKE_EXE_LINKER_FLAGS} -flto -fwhole-program")

FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
    MESSAGE(STATUS "OpenMP found and enabled")
    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
ELSE(OPENMP_FOUND)
    MESSAGE(STATUS "OpenMP not found")
ENDIF(OPENMP_FOUND)

MESSAGE(STATUS "Compiler flags: ${CMAKE_C_FLAGS}")
MESSAGE(STATUS "Linker flags: ${CMAKE_EXE_LINKER_FLAGS}")

ADD_EXECUTABLE(primeburner ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(primeburner m)

